CHANGES
*******

0.19 (unreleased)
=================

* **Removed**: Removed support for Python 2.
  
  You have to upgrade to Python 3 if you want to use this version.

* Added support for Python 3.8 and PyPy 3.6.

* Make Python 3.7 the default.

* Update to new signature of reg.arginfo, which returns now a FullArgSpec
  tuple instead of an ArgSpec tuple.


0.18.2 (2019-01-22)
===================

* Fixes an infinite recursion error during morepath.autoscan.

  The error that occurred when morepath.autoscan was run in an environment where
  two packages depended on each other, as well as depending on morepath
  through an intermediary.

  See `#536`_

  .. _#536: https://github.com/morepath/morepath/issues/536

* Added support for Python 3.6 and 3.7 and dropped support for Python 3.3

0.18.1 (2017-06-30)
===================

* Link generation was unstable when supplied with multiple URL parameters.
  Sort URL parameters so that link generation is stable. This is convenient
  in tests.

  This could potentially break tests which weren't stable in the past. Fixing
  the tests to use the alphabetical sort order should fix the issue.

* The poisoned host header protection is no longer case-sensitive.

* Underscores are now allowed in host headers. Though they are not valid in
  domain names, they are valid in host names and offer no attack surface.

0.18 (2017-03-17)
=================

* **New**: The `load`` API, which allows you to define how incoming JSON
  (through a POST, PUT or PATH request) will be converted to a Python object and
  how it will be validated. This feature lets you plug in external
  serialization and validation libraries, such as Marshmallow, Colander,
  Cerberus, Jsonschema or Voluptuous.

* **Removed**: ``morepath.body_model_predicate`` is removed from the
  Morepath API together with the ``morepath.App.load_json`` directive
  and the ``morepath.request.body_obj`` property.