@@ -15,7 +15,8 @@ basepython = python3.7
 deps = -r{toxinidir}/requirements/corelibs.txt
        -e{toxinidir}[pep8]
 
-commands = flake8 morepath setup.py
+commands = flake8 morepath *.py
+           black --check .
 
 [testenv:coverage]
 basepython = python3.7
