@@ -1,6 +1,7 @@
 [flake8]
-ignore = N801, E129, W504
+ignore = E203, W503
 show-source = True
+max-line-length = 89
 
 [tool:pytest]
 testpaths = morepath
