@@ -21,7 +21,8 @@ basepython = python3.7
 extras = pep8
 deps = {[src]deps}
 
-commands = flake8 morepath setup.py
+commands = flake8 morepath *.py
+           black --check .
 
 [testenv:coverage]
 basepython = python3.7
